--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=hr-app
+
+# PostgreSQL database connection settings
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5433/hr-app}
+spring.datasource.username=${DB_USERNAME:user}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
