--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
-spring.application.name=hr-app
+spring.application.name=timely_be
 
 # PostgreSQL database connection settings
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/hr-app}
-spring.datasource.username=${DB_USERNAME:user}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url={DATABASE_URL}
+spring.datasource.username={DATABASE_USERNAME}
+spring.datasource.password={DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 #
 ## Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
+# Swagger properties
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
+# CORS settings
+cors.allowed-origins=**
