--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # CORS settings
-cors.allowed-origins=**
+# Allow everything for testing
+cors.allowed-origins= *
