--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -30,6 +22,13 @@ jobs:
 
       - name: Build and Test with Maven
         run: mvn clean verify --file pom.xml
+
+      - name: Upload Surefire Test Reports
+        if: always() # Ensure reports are uploaded even if tests fail
+        uses: actions/upload-artifact@v3
+        with:
+          name: surefire-reports
+          path: target/surefire-reports/*.xml
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
