--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "test", "main", "pre-prod" ]
 
 jobs:
+  # Job to Build the Project
   build:
     runs-on: ubuntu-latest
 
@@ -20,15 +21,51 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build and Test with Maven
-        run: mvn clean verify --file pom.xml
+      - name: Build with Maven
+        run: mvn clean compile --file pom.xml
+
+  # Job to Run Tests and Upload Surefire Test Reports
+  test:
+    runs-on: ubuntu-latest
+    needs: build  # Ensure this job only runs if 'build' succeeds
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Run Tests with Maven
+        run: mvn clean test --file pom.xml
 
       - name: Upload Surefire Test Reports
-        if: always() # Ensure reports are uploaded even if tests fail
+        if: always()  # Upload reports even if tests fail
         uses: actions/upload-artifact@v3
         with:
           name: surefire-reports
           path: target/surefire-reports/*.xml
+
+  # Job to Generate Code Coverage Report and Upload to Codecov
+  code_coverage:
+    runs-on: ubuntu-latest
+    needs: test  # Ensure this job only runs if 'test' succeeds
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Run Coverage Report with Maven
+        run: mvn clean verify --file pom.xml
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
