--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
   # Job to Run Tests and Upload Surefire Test Reports
   test:
     runs-on: ubuntu-latest
-    needs: build  # Ensure this job only runs if 'build' succeeds
+    needs: build
 
     steps:
       - uses: actions/checkout@v4
@@ -42,12 +42,12 @@ jobs:
       - name: Run Tests with Maven
         run: mvn clean test --file pom.xml
 
-      - name: Upload Surefire Test Reports
-        if: always()  # Upload reports even if tests fail
-        uses: actions/upload-artifact@v3
+      - name: Upload Surefire Test Reports to GitHub
+        if: always()  # Run this even if tests fail
+        uses: actions/upload-test-report@v1
         with:
-          name: surefire-reports
           path: target/surefire-reports/*.xml
+
 
   # Job to Generate Code Coverage Report and Upload to Codecov
   code_coverage:
