--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "test", "main", "pre-prod" ]
 
 jobs:
-  # Job to Build the Project
+  # Build job
   build:
     runs-on: ubuntu-latest
 
@@ -24,7 +24,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean compile --file pom.xml
 
-  # Job to Run Tests and Upload Surefire Test Reports
+  # Test job
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -42,17 +42,26 @@ jobs:
       - name: Run Tests with Maven
         run: mvn clean test --file pom.xml
 
-      - name: Upload Surefire Test Reports to GitHub
-        if: always()  # Run this even if tests fail
-        uses: actions/upload-test-report@v1
+      - name: Upload Surefire Test Reports
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
+          name: surefire-reports
           path: target/surefire-reports/*.xml
 
+      - name: Report Test Results in PR
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: Java Tests
+          path: target/surefire-reports/*.xml
+          reporter: junit
+          fail-on-error: false
 
-  # Job to Generate Code Coverage Report and Upload to Codecov
+  # Code Coverage job
   code_coverage:
     runs-on: ubuntu-latest
-    needs: test  # Ensure this job only runs if 'test' succeeds
+    needs: test
 
     steps:
       - uses: actions/checkout@v4
