--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,16 +53,10 @@ jobs:
         if: always()
         uses: dorny/test-reporter@v1
         with:
-          name: Java Tests
+          name: test-results
           path: target/surefire-reports/*.xml
           reporter: java-junit
           fail-on-error: false
-
-      - name: Surefire Report
-        if: always()
-        uses: ScaCap/action-surefire-report@v1.8.0
-        with:
-          path: target/surefire-reports/*.xml
 
   # Code Coverage job
   code_coverage:
