--- a/codecov.yml
+++ b/codecov.yml
@@ -1,21 +1,22 @@
-comment:                  #this is a top-level key
-  layout: " diff, flags, files"
+comment:
+  layout: "diff, flags, files"
   behavior: default
-  require_changes: false  # if true: only post the comment if coverage changes
-  require_base: false        # [true :: must have a base report to post]
-  require_head: true       # [true :: must have a head report to post]
-  hide_project_coverage: false # [true :: only show coverage on the git diff aka patch coverage]]
+  require_changes: false
+  require_base: false
+  require_head: true
+  hide_project_coverage: false
+
 coverage:
   status:
     project:
       default:
-        target: auto
+        target: 70%        # Enforce 70% target for project coverage
         threshold: 10%
     patch:
       default:
-        target: auto
+        target: 70%        # Enforce 70% target for patch coverage
         threshold: 10%
     changes:
       default:
-        target: auto
+        target: 70%        # Enforce 70% target for changes coverage
         threshold: 10%
