--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,18 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-#
-## Hibernate settings
+
+# Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Enable batch operations
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
 
 # Swagger properties
 springdoc.api-docs.path=/v3/api-docs
@@ -18,4 +24,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # CORS settings
 # Allow everything for testing
-cors.allowed-origins= *
+cors.allowed-origins=*
+
+jwt.secret=very_secure_and_very_long_secret_key_here_at_least_32_characters
