--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=timely_be
 
 # PostgreSQL database connection settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/timely
-spring.datasource.username=timely_user
-spring.datasource.password=timely_password
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
