--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=timely_be
 
 # PostgreSQL database connection settings
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/timely
+spring.datasource.username=timely_user
+spring.datasource.password=timely_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # Enable batch operations
 spring.jpa.properties.hibernate.jdbc.batch_size=50
